# Computer-Algebra

./: .gitignore  ALGORITHMS.md  CMakeLists.txt  Makefile  README.md  api.py  ast.h  compile_flags.txt  config.example.yaml  config.yaml  input.c  input.h  lexer.c  main.c  main.py  parser.py  parserErrors.py  test  testrunner.py  tokenizer.c  tokenizer.h
.github/workflows/: build.yml
parsing/: builtins.c  builtins.h  functions.c  functions.h  lexer.c  lexer.h  parser.c  parser.h  parserTypes.c  parserTypes.h  tokenizer.c  tokenizer.h
parsing/codegen/: ast.c  ast.h  lexer.c  lexer.h  tokenizer.c  tokenizer.h
parsing/env/: environment.c  environment.h
parsing/tables/: functions.c  functions.h
source/parsing/: parser.c  parser.h  parserTypes.h  parserUtils.h
source/parsing/codegen/: ast.c  ast.h  lexer.c  lexer.h  tokenizer.c  tokenizer.h
source/utils/env/: environment.c  environment.h
src/: execute.c  execute.h  main.c
src/core/: CMakeLists.txt  axioms.c  axioms.h  common.h  context.h  execute.c  execute.h
src/core/context/: config.c  config.h  context.c  context.h  environment.c  environment.h  registry.c  registry.h
src/core/execution/: evaluate.c  evaluate.h  execute.c  execute.h  execution_utils.c  execution_utils.h  executor.c  executor.h  simplify.c  simplify.h
src/core/parsing/: parser.c  parser.h  parserTypes.h  parserUtils.c  parserUtils.h  parser_types.h  parser_utils.c  parser_utils.h
src/core/parsing/codegen/: ast.c  ast.h  lexer.c  lexer.h  normalizer.c  normalizer.h  tokenizer.c  tokenizer.h
src/core/primitives/: integers.c  integers.h  numbers.c  numbers.h  objects.c  objects.h  operations.c  operations.h  types.h
src/core/utils/: expr_utils.c  expr_utils.h  input.c  input.h  log.c  log.h  type_utils.c  type_utils.h  types.c  types.h
src/core/utils/context/: config.c  config.h  context.c  environment.c  environment.h
src/execution/: execute.c  execute.h
src/execution/algebra/: algebra.c  algebra.h  functions.c  functions.h
src/modules/: CMakeLists.txt  algebra.c  algebra.h  utils.h
src/modules/algebra/: algebra.c  algebra.h  utils.c  utils.h
src/parsing/: parser.c  parser.h  parserTypes.h  parserUtils.c  parserUtils.h
src/parsing/codegen/: ast.c  ast.h  lexer.c  lexer.h  tokenizer.c  tokenizer.h
src/utils/: config.c  config.h  log.c  log.h  types.c  types.h
src/utils/config/: config.c  config.h
src/utils/context/: config.c  config.h  context.c  context.h  environment.c  environment.h
src/utils/env/: environment.h
testing/: parser_tests.c
tests/: environment.yaml  operations.yaml  parser_tests.c  parser_tests.h  recursive.yaml  syntax.yaml  t1.yaml  test-safety.sh  test-speed.sh  test.c  test.sh
